--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>registration form</title>
+  <style>
+    
+  </style>
 </head>
 <body>
   <form>
@@ -37,9 +40,21 @@
           <input type="checkbox">diploma <br><br>
           <label for="">subject</label>
           <select name="" id="">
-            <option value="">scince</option>
-            <option value="">commerce</option>
-            <option value="">art</option>
+            <optgroup label="scince">
+              <option value="">physics</option>
+              <option value="">chamistry</option>
+              <option value="">boilogy</option>
+            </optgroup>
+            <optgroup label="commerce">
+              <option value="">Accountancy</option>
+              <option value="">Business Studies</option>
+              <option value="">Economics,</option>
+              <option value="">often Mathematics</option>
+            </optgroup>
+            <optgroup label="art">
+              <option value="">Sociology</option>
+              <option value="">History</option>
+            </optgroup>
           </select><br>
       </fieldset><br>
        <!-- diffrent structure -->
